--- a/companies-crud-prod.yml
+++ b/companies-crud-prod.yml
@@ -1,10 +1,7 @@
-spring:
-  application:
-    name: cdebuggeandoideas-prod
   datasource:
-    username: debuggeandoideas
+    username: debuggeandoideas-prod
     hikari:
       maximum-pool-size: '5'
       connection-timeout: '20000'
-    url: jdbc:postgresql://localhost:5432/companies
-    password: 1234567890
+    url: jdbc:postgresql://localhost:5432/companies-prod
+    password: udemy
