--- a/companies-crud-qa.yml
+++ b/companies-crud-qa.yml
@@ -1,1 +1,10 @@
-
+spring:
+  application:
+    name: companies-qa
+  datasource:
+    username: debuggeandoideas
+    hikari:
+      maximum-pool-size: '5'
+      connection-timeout: '20000'
+    url: jdbc:postgresql://localhost:5432/companies-qa
+    password: udemy
