--- a/companies-crud-qa.yml
+++ b/companies-crud-qa.yml
@@ -1,8 +1,5 @@
-spring:
-  application:
-    name: companies-qa
   datasource:
-    username: debuggeandoideas
+    username: debuggeandoideas-qa
     hikari:
       maximum-pool-size: '5'
       connection-timeout: '20000'
