--- a/report-ms-prod.yml
+++ b/report-ms-prod.yml
@@ -1,4 +1,4 @@
 report:
   template: "{company} was founded in {foundation_date} by {founder} the websites from this company are {web_sites}"
 fallback:
-  uri: "https://localhost:8787/companies-crud-fallback/company/{name}"
+  uri: "http://localhost:8787/companies-crud-fallback/company/{name}"
